grammar.js
    nu_script: ($) => seq(optional($.shebang), optional($._block_body)),

    _block_body: ($) =>
      general_body_rules(
        "",
        $._block_body_statement,
        $._terminator,
        null,
        null,
        $._terminator,
      ),

    /// Identifiers
    // NOTE:
    // probably needs an external scanner for cmd_identifier
    // to behave exactly the same as the nushell parser
    cmd_identifier: ($) => {
      const excluded = "\\[\\]\\{}<>=\"`':";
      const pattern_repeat = repeat(none_of(excluded));
      const pattern_one = repeat1(none_of(excluded));
      return choice(
        token(
          prec(PREC().low, seq(none_of(excluded + "^#$\\-"), pattern_repeat)),
        ),
        ...Object.values(KEYWORD()).map((x) => token(seq(x, pattern_one))),
        ...Object.values(MODIFIER()).map((x) => token(seq(x, pattern_one))),
        ...Object.values(SPECIAL()).map((x) => token(seq(x, pattern_one))),
        seq(
          $._val_number_decimal,
          optional(
            choice(
              alias($.duration_unit, "_unit"),
              alias($.filesize_unit, "_unit"),
            ),
          ),
          // conflict with expr_binary
          optional(choice(...TABLE().map((x) => token.immediate(x[1])))),
          token.immediate(prec(PREC().low, pattern_repeat)),
        ),
      );
    },
    identifier: (_$) => _identifier_rules(false),

    _command_name: ($) =>
      choice(
        field("unquoted_name", $.cmd_identifier),
        field("quoted_name", $.val_string),
      ),

    _variable_name: ($) =>
      choice(
        field("var_name", $.identifier),
        field("dollar_name", $.val_variable),
      ),

    // remove newline characters from extras to reduce ambiguity
    // manually controlled by adding the following to parenthesized rules
    _newline: (_$) => /\r?\n/,
    _space: (_$) => /[ \t]+/,
    _separator: ($) => choice($._space, $._newline),
    _pipe_separator: ($) =>
      repeat1(seq(repeat($._newline), choice(PUNC().pipe, ...REDIR_PIPE()))),

    /// Top Level Items

    _ctrl_statement: ($) =>
      choice($.ctrl_for, $.ctrl_loop, $.ctrl_while, $.ctrl_error),

    // control expressions *return values and can be used in pipelines
    //
    // * `break` and `continue` do not return values (yet?) but can be
    // used in pipelines
    _ctrl_expression: ($) =>
      choice(
        field("ctrl_break", KEYWORD().break),
        field("ctrl_continue", KEYWORD().continue),
        $.ctrl_do,
        $.ctrl_if,
        $.ctrl_try,
        $.ctrl_match,
        $.ctrl_return,
      ),

    pipe_element: ($) =>
      choice(
        seq(
          _env_variable_rule(false, $),
          $._expression,
          optional($.redirection),
        ),
        seq(_env_variable_rule(false, $), $.command),
        $._ctrl_expression,
        $.where_command,
      ),

    _stmt_hide: ($) => choice($.hide_mod, $.hide_env),

    _stmt_overlay: ($) =>
      choice($.overlay_hide, $.overlay_list, $.overlay_new, $.overlay_use),

    _blosure: ($) => choice(prec.dynamic(10, $.block), $.val_closure),

    // the where command has a unique argument pattern that breaks the
    // general command parsing, so we handle it separately
    _predicate: ($) =>
      choice(
        $.val_bool,
        $.expr_unary,
        $.expr_parenthesized,
        ...PREDICATE().map(([precedence, opr]) =>
          prec.left(
            precedence,
            seq(
              field(
                "lhs",
                choice(
                  $._where_predicate_lhs,
                  $.val_variable,
                  $.expr_parenthesized,
                ),
              ),
              field("opr", opr),
              field(
                "rhs",
                choice(
                  $._value,
                  $.val_range,
                  $.expr_unary,
                  $.expr_parenthesized,
                  alias($.unquoted, $.val_string),
                  alias($._unquoted_with_expr, $.val_string),
                ),
              ),
            ),
          ),
        ),
      ),

    /// Expressions

    _expression: ($) =>
      choice(
        $._value,
        $.expr_binary,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
      ),

    _expression_parenthesized: ($) =>
      choice(
        $._value,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
        alias($.expr_binary_parenthesized, $.expr_binary),
      ),

    /// Composite Expressions

    _expr_binary_expression: ($) =>
      choice(
        $._value,
        $.val_range,
        $.expr_binary,
        $.expr_unary,
        $.expr_parenthesized,
      ),

    _expr_binary_expression_parenthesized: ($) =>
      choice(
        $._value,
        $.val_range,
        alias($.expr_binary_parenthesized, $.expr_binary),
        $.expr_unary,
        $.expr_parenthesized,
      ),

    expr_parenthesized: ($) =>
      seq(
        BRACK().open_paren,
        optional($._parenthesized_body),
        BRACK().close_paren,
        optional($.cell_path),
      ),

    _expr_parenthesized_immediate: ($) =>
      seq(
        token.immediate(BRACK().open_paren),
        optional($._parenthesized_body),
        BRACK().close_paren,
      ),

    _parenthesized_body: ($) =>
      general_body_rules(
        "",
        $._block_body_statement_parenthesized,
        $._terminator,
        null,
        [
          repeat1(seq(repeat($._newline), PUNC().semicolon)),
          repeat($._newline),
        ],
        $._terminator,
      ),

    val_range: _range_rule(false),
    _val_range: _range_rule(true),
    _val_range_with_end: _range_rule(true, true),

    _immediate_decimal: _decimal_rule(true),

    /// Simple Expressions

    val_variable: ($) =>
      seq(
        PUNC().dollar,
        field("name", choice("nu", "in", "env", $.identifier)),
        optional($.cell_path),
      ),

    val_number: ($) => $._val_number,

    _val_number_decimal: _decimal_rule(false),

    // separating floats from integers does not end well
    // especially when it comes to incorporation with ranges.
    _val_number: ($) =>
      choice(
        $._val_number_decimal,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
        SPECIAL().pos_infinity,
        SPECIAL().neg_infinity,
        SPECIAL().not_a_number,
      ),

    val_duration: ($) =>
      seq(
        field("value", alias($._val_number_decimal, $.val_number)),
        field("unit", $.duration_unit),
      ),

    duration_unit: (_$) => token.immediate(choice(
      "ns", "µs", "us", "ms", "sec", "min", "hr", "day", "wk"
    )),

    _stringish: ($) =>
      choice(
        $.val_string,
        $.val_interpolated,
        $.expr_parenthesized,
        $.val_variable,
      ),

    val_string: ($) =>
      choice(
        $._str_double_quotes,
        $._str_single_quotes,
        $._str_back_ticks,
        $._raw_str,
      ),

    _raw_str: ($) =>
      seq($.raw_string_begin, $.raw_string_content, $.raw_string_end),

    _str_double_quotes: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._escaped_str_content,
            // double quoted strings accept escapes
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    _str_single_quotes: (_$) => /'[^']*'/,

    _str_back_ticks: (_$) => /`[^`]*`/,

    val_list: ($) =>
      seq(
        BRACK().open_brack,
        optional($.list_body),
        BRACK().close_brack,
        optional($.cell_path),
      ),

    _spread_listish: ($) =>
      choice(
        alias($._spread_list, $.val_list),
        alias($._spread_variable, $.val_variable),
        alias($._spread_parenthesized, $.expr_parenthesized),
      ),

    list_body: ($) =>
      general_body_rules(
        "entry",
        $.val_entry,
        $._entry_separator,
        $._newline,
        null,
        choice($._newline, PUNC().comma),
      ),

    val_entry: ($) =>
      prec(
        10,
        field(
          "item",
          choice(
            $._item_expression,
            field("spread", $._spread_listish),
            alias($._unquoted_in_list, $.val_string),
            alias($._unquoted_in_list_with_expr, $.val_string),
          ),
        ),
      ),

    _item_expression: ($) =>
      choice($._value, $.val_range, $.expr_parenthesized),

    val_record: ($) =>
      seq(
        BRACK().open_brace,
        optional($.record_body),
        BRACK().close_brace,
        optional($.cell_path),
      ),

    _spread_recordish: ($) =>
      choice(
        alias($._spread_record, $.val_record),
        alias($._spread_variable, $.val_variable),
        alias($._spread_parenthesized, $.expr_parenthesized),
      ),

    record_body: ($) =>
      general_body_rules(
        "entry",
        $.record_entry,
        $._entry_separator,
        $._newline,
      ),

    _entry_separator: (_$) =>
      token(prec(PREC().higher, choice(PUNC().comma, /\s/))),

    record_entry: ($) =>
      choice(
        field("spread", $._spread_recordish),
        seq(
          field(
            "key",
            choice(
              // Without $.cmd_identifier, cannot correctly distinguish between record and closure
              seq(alias($.cmd_identifier, $.identifier), repeat($._separator)),
              alias($._record_key, $.identifier),
              $.val_string,
              $.val_number,
              $.val_variable,
              $.expr_parenthesized,

              // This distinguish between record keys and keywords
              ...Object.values(KEYWORD()).map((x) => alias(x, $.identifier)),
              ...Object.values(MODIFIER()).map((x) => alias(x, $.identifier)),
            ),
          ),
          token(prec(PREC().higher, PUNC().colon)),
          field(
            "value",
            choice(
              $._item_expression,
              alias($._unquoted_in_record, $.val_string),
              alias($._unquoted_in_record_with_expr, $.val_string),
            ),
          ),
        ),
      ),

    _record_key: (_$) => {
      const excluded = "\\[\\]{}\"`':,";
      const pattern_repeat = repeat(none_of(excluded));
      // This distinguish number and identifier starting with -/+
      return seq(
        choice(token(OPR().minus), token(OPR().plus)),
        token.immediate(pattern_repeat),
      );
    },

    val_closure: ($) =>
      seq(
        BRACK().open_brace,
        repeat($._newline),
        optional(field("parameters", $.parameter_pipes)),
        $._block_body,
        BRACK().close_brace,
      ),

    /// CellPaths

    _cmd_arg: ($) =>
      choice(
        field("redir", prec.right(10, $.redirection)),
        field("flag", prec.right(9, $._flag)),
        field("arg", prec.right(8, $._value)),
        field("arg", prec.right(8, $.val_range)),
        field("arg", prec.right(7, $.expr_parenthesized)),
        field("arg_spread", $._spread_listish),
        // lowest precedence to make it a last resort
        field("arg_str", alias($.unquoted, $.val_string)),
        field("arg_str", alias($._unquoted_with_expr, $.val_string)),
      ),

    _unquoted_anonymous_prefix: ($) =>
      choice(
        ...REDIR_APPEND(),
        SPECIAL().null,
        alias($.val_bool, "_prefix"),
        alias($.val_date, "_prefix"),
        seq(
          $._val_number_decimal,
          choice(
            alias($.duration_unit, "_unit"),
            alias($.filesize_unit, "_unit"),
          ),
        ),
      ),

    /// Comments

    comment: (_$) => seq(PUNC().hash, /.*/),
  },
});

/**
 * @param {boolean} immediate
 */
function _identifier_rules(immediate) {
  const func = immediate ? token.immediate : token;
  const excluded = "\\[\\]\\-{}<>=\"`'@?,:.";
  return func(seq(none_of(excluded + "&*!^+#$"), repeat(none_of(excluded))));
}

/**
 * for rules of repeated pattern that require separator in-between
 * e.g. list, record, blocks
 * @param {string} field_name
 * @param {any} entry base build block
 * @param {any} separator separator between entries
 * @param {any} preceding separator before first entry, defaults to separator
 * @param {array} alt_sep array of rules to override default separator
 * @param {any} empty_unit optional for empty body
 */
function general_body_rules(
  field_name,
  entry,
  separator,
  preceding = null,
  alt_sep = null,
  empty_unit = null,
) {
  const field_entry = field_name.length == 0 ? entry : field(field_name, entry);
  const prec_sep = preceding || separator;
  // Normal entries MUST have a separator
  const sep_array = alt_sep || [repeat1(separator)];
  const rule = prec(
    PREC().higher,
    seq(
      repeat(prec_sep),
      repeat(seq(field_entry, ...sep_array)),
      field_entry,
      // Final entry may or may not have separator
      repeat(separator),
    ),
  );
  return empty_unit ? choice(repeat1(empty_unit), rule) : rule;
}

function parenthesized_body_rules() {
  return {
    ..._block_body_rules("_parenthesized"),

    /// pipeline
